GNOME Bugzilla – Bug 785978
gtk test failures with pango 1.40.8
Last modified: 2017-08-31 04:56:42 UTC
Ubuntu 17.10 Alpha gtk+ 3.22.18 glib 2.53.4 pango 1.40.8 Some of the build tests run during Ubuntu builds are failing now. Full build log at https://launchpad.net/~jbicha/+archive/ubuntu/temp20170806/+build/13215816 Build log excerpts below: TEST: textbuffer... (pid=2679) /TextBuffer/UTF8 unknown char: OK /TextBuffer/Line separator: OK /TextBuffer/Backspace: OK /TextBuffer/Logical motion: ** (/build/gtk+3.0-0vdXVa/gtk+3.0-3.22.18/debian/build/shared/testsuite/gtk/.libs/textbuffer:2679): ERROR **: Sentence position 4, expected 3 FAIL GTester: last random seed: R02S4fee257843d641ba8692560618fa6cbe (pid=2695) TEST: textiter... (pid=2710) /TextIter/Search Empty: OK /TextIter/Search Full Buffer: OK /TextIter/Search: OK /TextIter/Search Caseless: OK /TextIter/Forward To Tag Toggle: OK /TextIter/Forward To Line End: OK /TextIter/Word Boundaries: OK /TextIter/Visible Word Boundaries: OK /TextIter/Cursor Positions: OK /TextIter/Visible Cursor Positions: OK /TextIter/Sentence Boundaries: ** ERROR:/build/gtk+3.0-0vdXVa/gtk+3.0-3.22.18/./testsuite/gtk/textiter.c:675:check_sentence_boundaries: assertion failed (ends_sentence == gtk_text_iter_ends_sentence (&iter)): (1 == 0) FAIL GTester: last random seed: R02Sa9d02ec894f4a9b0298518f16ba597b5 (pid=2726) make[5]: Entering directory '/build/gtk+3.0-0vdXVa/gtk+3.0-3.22.18/debian/build/shared/testsuite/a11y' TEST: tree-performance... (pid=3544) PASS: tree-performance TEST: text... (pid=3570) /text/bold/GtkLabel: OK /text/basic/GtkLabel: OK /text/basic/GtkEntry: OK /text/basic/GtkTextView: OK /text/words/GtkLabel: ** ERROR:/build/gtk+3.0-0vdXVa/gtk+3.0-3.22.18/./testsuite/a11y/text.c:912:test_words: assertion failed (word == expected[i].word): ("" == "abc!") FAIL GTester: last random seed: R02S8b060c44049b7f2bc78ec89373735616 (pid=3586) /text/words/GtkEntry: ** ERROR:/build/gtk+3.0-0vdXVa/gtk+3.0-3.22.18/./testsuite/a11y/text.c:912:test_words: assertion failed (word == expected[i].word): ("" == "abc!") FAIL GTester: last random seed: R02Sa009e1657b677f86525ff9c7de7a2bd1 (pid=3602) /text/words/GtkTextView: ** ERROR:/build/gtk+3.0-0vdXVa/gtk+3.0-3.22.18/./testsuite/a11y/text.c:912:test_words: assertion failed (word == expected[i].word): ("" == "abc!") FAIL
I get the same test failures with gtk+ 3.22.17. I am seeing similar test failures in libgtk2-perl: http://autopkgtest.ubuntu.com/packages/libg/libgtk2-perl/artful/amd64 Let's reassign to pango since this appears to be a regression introduced there.
Okay, I will check the testsuite failures for pango 1.40.8 soon.
Created attachment 357690 [details] [review] Fix pango_default_break function for sentence start/end Skip the space characters in sentence start/end.
Sorry, I mis-understand the sentence start and sentence end. The above patch fixed the issue. Please review it, thanks!
Your patches fixes the gtk3 tests for me. ☺️ I haven't tried the libgtk2-perl tests yet.
The libgtk2-perl tests are passing now after this patch.
Thanks for the feedback! :)
Matthias, you closed this bug, but the patch hasn't been committed yet.
Could you review and merge the patch?
Review of attachment 357690 [details] [review]: ok
Attachment 357690 [details] pushed as 33c10cb - Fix pango_default_break function for sentence start/end
Thanks for the review!