Fix pango_default_break function for sentence start/end

Skip the space characters in sentence start/end.

https://bugzilla.gnome.org/show_bug.cgi?id=785978